# AUTOMATIC1111

./: .envrc  .gitignore  .gitmodules  Abg  CHANGELOG.md  Dockerfile  VideoToPhoto.py  compose.yml  environment.yaml  fast_stable_diffusion_automatic1111.ipynb  flake.nix  patryk  pyproject.toml  pythonSets.nix  requirements.txt  requirements_npu.txt  requirements_versions.txt  script.js  start_sd-webui-sdxl.sh  webui-macos-env.sh  webui-user.bat  webui-user.sh  webui.bat  webui.py  webui.sh
.github/workflows/: test.yml
.macmilling/: Extension_Installation.txt  config.json  service.webui-user.bat  webui-user.bat
.macmilling/tags/: macmilling-chants.json  macmilling-danbooru.csv  macmilling-e621.csv  macmilling-quality-tags.csv
dockerenv/ssh/: id_rsa  id_rsa.pub
extensions/: index.json
extensions-builtin/postprocessing-for-training/scripts/: postprocessing_caption.py
extensions/pollinations-api/: README.md  __init__.py  install.py
extensions/pollinations-api/scripts/: pollinations_api.py
javascript/: imageviewer.js  localStorage.js  ui.js
modules/: cache.py  cmd_args.py  config_states.py  download_from_s3.py  env_to_yaml.py  img2img.py  launch_utils.py  ngrok.py  s3.py  sd_models.py  sd_samplers_cfg_denoiser.py  ui.py  ui_extensions.py  ui_settings.py
modules/api/: api.py  models.py
modules/processing_scripts/: seed.py
nix/devShells/init/: default.nix
nix/nixosModules/: default.nix
scripts/: img2imgalt.py  txt2img_prompt_optimizer.py  xyz_grid.py
testapi/: generate.py
