[project]
name = "stable-diffusion-webui"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.4.0",
  "blendmodes>=2024",
  "clean-fid>=0.1.35",
  "clip",
  "cv-3>=1.2.0",
  "diskcache>=5.6.3",
  "einops>=0.8.1",
  "facexlib>=0.3.0",
  "gitpython>=3.1.44",
  "gradio==3.41.2",
  "inflection>=0.5.1",
  "jsonmerge>=1.9.2",
  "kornia>=0.8.0",
  "lark>=1.2.2",
  "omegaconf>=2.3.0",
  "open-clip-torch>=2.31.0",
  "piexif>=1.1.3",
  "pillow-avif-plugin>=1.4.6",
  "psutil>=7.0.0",
  "pydantic~=1.10",
  "pytorch-lightning~=1.9",
  "requests>=2.32.3",
  "resize-right>=0.0.2",
  "safetensors>=0.5.3",
  "scikit-image>=0.25.2",
  "scipy>=1.15.2",
  "sgm",
  "tomesd>=0.1.3",
  "torch==2.4.1",
  "torchdiffeq>=0.2.5",
  "torchsde>=0.2.6",
  "transformers>=4.49.0",
  "xformers>=0.0.28.post1",
]

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
  { include-group = "lint" },
]
typing = ["mypy>=1.13.0"]
test = ["pytest-cov>=6.0.0", "pytest>=8.3.3"]
lint = ["ruff>=0.7.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**/*.py", "**/*.js", "**/*.html", "/tests"]
# exclude = ["*.json", "pkg/_compat.py"]

[tool.ruff]

target-version = "py39"

[tool.ruff.lint]

extend-select = ["B", "C", "I", "W"]

exclude = ["extensions", "extensions-disabled"]

ignore = [
  "E501", # Line too long
  "E721", # Do not compare types, use `isinstance`
  "E731", # Do not assign a `lambda` expression, use a `def`

  "I001", # Import block is un-sorted or un-formatted
  "C901", # Function is too complex
  "C408", # Rewrite as a literal
  "W605", # invalid escape sequence, messes with some docstrings
]

[tool.ruff.lint.per-file-ignores]
"webui.py" = ["E402"] # Module level import not at top of file

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

[tool.pytest.ini_options]
base_url = "http://127.0.0.1:7860"

[tool.uv.sources]
sgm = { git = "https://github.com/Stability-AI/generative-models", rev = "45c443b316737a4ab6e40413d7794a7f5657c19f" }
clip = { git = "https://github.com/openai/CLIP.git" }
